force-app/main/default/src/objects/PJN_Log__c/PJN_Log__c.object-meta.xml
<CustomObject>
    <description>Logs errors and debug information for Patient Service Accelerator</description>
    <label>Log</label>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>