force-app/main/default/src/objects/PJN_Log__c/fields/PJN_Logged_Message__c.field-meta.xml
<CustomField>
    <fullName>PJN_Logged_Message__c</fullName>
    <description>The error message that has been logged.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Logged Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>