force-app/main/default/src/objects/PJN_Log__c/fields/PJN_Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>PJN_Logging_Level__c</fullName>
    <description>Specifies the logging level/severity of the error.</description>
    <label>Logging Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>FINER</fullName>
            </value>
            <value>
                <fullName>FINEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>