force-app/main/default/src/objects/PJN_Log__c/fields/PJN_Message__c.field-meta.xml
<CustomField>
    <fullName>PJN_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>