force-app/main/default/src/objects/PJN_Log__c/fields/PJN_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_SObject_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>