force-app/main/default/src/objects/PJN_Log__c/fields/PJN_Source__c.field-meta.xml
<CustomField>
    <fullName>PJN_Source__c</fullName>
    <description>The source of the error. Typically a class or feature name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>