force-app/main/default/src/objects/PJN_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>PJN_Logged_Message__c</columns>
    <columns>PJN_Source__c</columns>
    <columns>PJN_Logging_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>